@@ -531,6 +531,7 @@ tab.common.move=Move
 tab.common.print=Print
 tab.common.special=Special
 tab.common.unwatch=Unwatch
+tab.common.viewsource=View Source
 tab.common.watch=Watch
 topic.caption.editlegend=Editing Controls
 topic.categories=Categories
@@ -598,6 +599,9 @@ usermenu.register=Register
 usermenu.user={0}
 usermenu.usercomments=User Comments
 usermenu.watchlist=Watchlist
+viewsource.caption.legend=Wiki markup for {0}
+viewsource.caption.overview=The wiki markup for {0} is displayed below.  To change this markup please use the "Edit" tab above.  If no "Edit" tab is present then you do not have permission to edit the current topic, and you will either need to login, or if you are already logged-in then please contact the administrator of this wiki and request permission to edit this topic.
+viewsource.title=View Source for {0}
 watchlist.caption.added=The topic <b>{0}</b> has been added to your watchlist.
 watchlist.caption.empty=There are no items in your watchlist.
 watchlist.caption.removed=The topic <b>{0}</b> has been removed from your watchlist.
