@@ -1,0 +1,60 @@
+/**
+ * Licensed under the GNU LESSER GENERAL PUBLIC LICENSE, version 2.1, dated February 1999.
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the latest version of the GNU Lesser General
+ * Public License as published by the Free Software Foundation;
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this program (LICENSE.txt); if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+ */
+package org.jamwiki.servlets;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import org.jamwiki.WikiException;
+import org.jamwiki.WikiMessage;
+import org.jamwiki.model.Topic;
+import org.jamwiki.utils.WikiLogger;
+import org.jamwiki.utils.WikiUtil;
+import org.springframework.web.servlet.ModelAndView;
+
+/**
+ * Used to allow a user to view a topic source.  This functionality is generally
+ * only necessary when a user does not have edit permission for a topic.
+ */
+public class ViewSourceServlet extends JAMWikiServlet {
+
+	private static final WikiLogger logger = WikiLogger.getLogger(ViewSourceServlet.class.getName());
+	/** The name of the JSP file used to render the servlet output. */
+	protected static final String JSP_VIEW_SOURCE = "view-source.jsp";
+
+	/**
+	 *
+	 */
+	protected ModelAndView handleJAMWikiRequest(HttpServletRequest request, HttpServletResponse response, ModelAndView next, WikiPageInfo pageInfo) throws Exception {
+		this.view(request, next, pageInfo);
+		return next;
+	}
+
+	/**
+	 *
+	 */
+	private void view(HttpServletRequest request, ModelAndView next, WikiPageInfo pageInfo) throws Exception {
+		String topicName = WikiUtil.getTopicFromRequest(request);
+		String virtualWiki = pageInfo.getVirtualWikiName();
+		Topic topic = ServletUtil.initializeTopic(virtualWiki, topicName);
+		topicName = topic.getName();
+		String contents = (topic == null) ? "" : topic.getTopicContent();
+		next.addObject("contents", contents);
+		pageInfo.setPageTitle(new WikiMessage("viewsource.title", topicName));
+		pageInfo.setTopicName(topicName);
+		pageInfo.setContentJsp(JSP_VIEW_SOURCE);
+	}
+}
