@@ -7,6 +7,8 @@ New Features:
   * Display HTML links of the form "[http://example.com]" using numbered links
     to match Mediawiki behavior.  The legacy behavior can be restored with a
     configuration options.
+  * Add a "View Source" tab to allow users who do not have permission to edit
+    a topic to view its wiki markup.
   * Enable DBCP prepared statement pooling to improve performance.
   * Remove ability to automatically upgrade from versions prior to 0.9.0.
 
